{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 147,
  "lineage": "0b9cb338-bd2b-a6e5-a7ea-60b0c1d20e0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:324656210046:vpc/vpc-0bdd1bbc7039109e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01eac73468726088f",
            "default_route_table_id": "rtb-0e859bd8be0e56780",
            "default_security_group_id": "sg-0fd0e4919a83e3e53",
            "dhcp_options_id": "dopt-0ec17524a5afd9d2c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bdd1bbc7039109e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e859bd8be0e56780",
            "owner_id": "324656210046",
            "tags": {
              "Name": "dev-vpc",
              "vpc_env": "dev"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "vpc_env": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.dev-app-subnet",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:324656210046:route-table/rtb-0e859bd8be0e56780",
            "default_route_table_id": "rtb-0e859bd8be0e56780",
            "id": "rtb-0e859bd8be0e56780",
            "owner_id": "324656210046",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069cecdee07f893a3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-main-rtb"
            },
            "tags_all": {
              "Name": "dev-main-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdd1bbc7039109e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-app-vpc",
            "module.dev-app-subnet.aws_internet_gateway.dev-app-igw"
          ]
        }
      ]
    },
    {
      "module": "module.dev-app-subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-app-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:324656210046:internet-gateway/igw-069cecdee07f893a3",
            "id": "igw-069cecdee07f893a3",
            "owner_id": "324656210046",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0bdd1bbc7039109e9"
          },
          "dependencies": [
            "aws_vpc.dev-app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-app-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-app-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:324656210046:subnet/subnet-0d35f7ae87acce87f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d35f7ae87acce87f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324656210046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-1",
              "vpc_env": "dev"
            },
            "tags_all": {
              "Name": "dev-subnet-1",
              "vpc_env": "dev"
            },
            "vpc_id": "vpc-0bdd1bbc7039109e9"
          },
          "dependencies": [
            "aws_vpc.dev-app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-app-webserver",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:324656210046:security-group/sg-0fd0e4919a83e3e53",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd0e4919a83e3e53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "24.72.96.123/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "324656210046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-default-sg"
            },
            "tags_all": {
              "Name": "dev-default-sg"
            },
            "vpc_id": "vpc-0bdd1bbc7039109e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-app-webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bafcea81f5e35831",
            "arn": "arn:aws:ec2:ca-central-1:324656210046:instance/i-0a00bac94c843d5ab",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a00bac94c843d5ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a53069901950f7b9",
            "private_dns": "ip-10-0-10-130.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.130",
            "public_ip": "35.183.112.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2bba03f297ba3f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d35f7ae87acce87f",
            "tags": {
              "Name": "dev-server"
            },
            "tags_all": {
              "Name": "dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd0e4919a83e3e53"
            ]
          },
          "dependencies": [
            "aws_vpc.dev-app-vpc",
            "module.dev-app-subnet.aws_subnet.dev-app-subnet-1",
            "module.dev-app-webserver.aws_default_security_group.default-sg",
            "module.dev-app-webserver.aws_key_pair.ssh-key",
            "module.dev-app-webserver.data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    }
  ]
}